Corrección Prefacio y Capítulo 1

--- a/book/book.tex
+++ b/book/book.tex
@@ -181,9 +181,9 @@ Se concede permiso para copiar, distribuir y/o modificar este documento
 bajo los términos de la Creative Commons Attribution-NonCommercial
 3.0 Unported License, la cual está disponible en \url{http://creativecommons.org/licenses/by-nc/3.0/}.
 
-La forma original de este libro es en código fuente de \LaTeX\ .  Compilar esta
-fuente de \LaTeX\ tiene el efecto de generar una representación de un libro de texto
-independiente del dispositivo, el cual se puede convertir a otros formatos
+La forma original de este libro está en código fuente de \LaTeX.  La compilación
+de esta fuente de \LaTeX\ tiene el efecto de generar una representación de un libro
+de texto independiente del dispositivo, la cual se puede convertir a otros formatos
 e imprimir.
 
 La fuente de \LaTeX\ para este libro está disponible en
@@ -299,15 +299,15 @@ El resultado es este libro, ahora con el título menos grandioso
 
 \item Agregué más ejercicios, que van desde pruebas cortas de comprensión
   hasta algunos proyectos sustanciales.  La mayoria de los ejercicios
-  incluye un enlace a mi solución.
+  incluyen un enlace a mi solución.
 
-\item Agregué una serie de estudios de caso---ejemplos más largos con
+\item Agregué una serie de estudios de caso: ejemplos más largos con
   ejercicios, soluciones y discusión.
 
 \item Expandí la discusión de planes de desarrollo de programa y
   pautas de diseño básicas.
 
-\item Agregué apéndices acerca de depuración y análisis de algoritmos.
+\item Agregué apéndices sobre depuración y análisis de algoritmos.
 
 \end{itemize}
 
@@ -319,7 +319,7 @@ La segunda edición de {\em Piensa en Python} tiene nuevas características:
 
 \item Agregué unas pocas secciones, y más detalles en la web, para ayudar a
 los principiantes a empezar a ejecutar Python en un navegador, así que no
-tienes que lidiar con la instalación de Python hasta que tú quieras hacerlo.
+tienes que lidiar con la instalación de Python hasta que quieras hacerlo.
 
 \item Para el Capítulo~\ref{turtle} cambié mi propio paquete de gráfica
   tortuga, llamado Swampy, por un módulo de Python más estándar, {\tt
@@ -353,7 +353,7 @@ de {\em How to Think Like a Computer Scientist}.
 \index{Meyers, Chris}
 
 Gracias a la Free Software Foundation por desarrollar
-la Licencia de documentación libre de GNU, que me ayudó
+la Licencia de documentación libre de GNU, la cual me ayudó
 a hacer posible mi colaboración con Jeff y Chris, y a Creative
 Commons por la licencia que uso ahora.
 \index{Licencia de documentación libre de GNU}
@@ -385,8 +385,8 @@ retroalimentación, te agregaré a la lista de colaboradores
 (a menos que pidas ser omitido).
 
 Si incluyes al menos una parte de la oración en donde
-aparece el error, eso me facilita la búsqueda.  Números de página
-y de sección están bien también, pero el trabajo no es tan fácil.
+aparece el error, eso me facilita la búsqueda.  Los números de página
+y de sección también están bien, pero no es tan fácil trabajar estos.
 ¡Gracias!
 
 \begin{itemize}
@@ -399,8 +399,8 @@ el Capítulo 5.
 
 \item Fred Bremmer envió una corrección en la Sección 2.1.
 
-\item Jonah Cohen escribió los scripts de Perl que convierte la
-fuente de LaTeX para este libro en un hermoso HTML.
+\item Jonah Cohen escribió los scripts de Perl que convierten la
+fuente de LaTeX de este libro en un hermoso HTML.
 
 \item Michael Conlon envió una corrección gramatical en el Capítulo 2
 y una mejora de estilo en el Capítulo 1, e inició la discusión
@@ -420,13 +420,13 @@ del texto.
 \item James Kaylin es un estudiante que usa el texto. Ha enviado
 numerosas correcciones.
 
-\item David Kershaw arregló la función rota {\tt catTwice} en la Sección
+\item David Kershaw arregló la función incorrecta {\tt catTwice} en la Sección
 3.10.
 
 \item Eddie Lam ha enviado numerosas correcciones a los Capítulos
 1, 2 y 3.
 También arregló el Makefile para que cree un índice la primera vez que
-se ejecuta y nos ayudó a configurar un esquema de versionamiento.
+se ejecute y nos ayudó a configurar un esquema de versionamiento.
 
 \item Man-Yong Lee envió una corrección al código de ejemplo en la
 Sección 2.4.
@@ -441,7 +441,7 @@ ser cambiada a ``subconsciente''.
 \item Matthew J. Moelter ha sido un colaborador por mucho tiempo que envió
 numerosas correcciones y sugerencias al libro.
 
-\item Simon Dicon Montford informó una definición de función faltante y
+\item Simon Dicon Montford informó sobre una definición de función faltante y
 muchos errores tipográficos en el Capítulo 3.  Además, encontró errores en la función {\tt increment}
 en el Capítulo 13.
 
@@ -458,7 +458,7 @@ amables palabras de aliento.
 y excepciones.
 
 \item Robin Shaw señaló un error en la Sección 13.1, donde la
-función printTime se usó en un ejemplo sin ser definida.
+función printTime se usó en un ejemplo sin estar definida.
 
 \item Paul Sleigh encontró un error en el Capítulo 7 y un error en el script de Perl
 de Jonah Cohen que genera HTML a partir de LaTeX.
@@ -470,7 +470,7 @@ University.  Ha aportado muchas sugerencias y correcciones valiosas.
 programación.  Ellos son los primeros en probar los capítulos de la segunda mitad
 del libro, y han hecho numerosas correcciones y sugerencicas.
 
-\item Keith Verheyden envió una correción en en Capítulo 3.
+\item Keith Verheyden envió una correción en el Capítulo 3.
 
 \item Peter Winstanley nos hizo saber sobre un error en
 nuestro Latin que estuvo por mucho tiempo en el Capítulo 3.
@@ -480,13 +480,13 @@ entrada/salida de archivo y excepciones.
 
 \item Moshe Zadka ha hecho contribuciones invaluables a este proyecto.
 Además de escribir el primer borrador del capítulo de Diccionarios,
-proporcionó orientación continua en las primeras etapas del libro.
+proporcionó constante orientación en las primeras etapas del libro.
 
 \item Christoph Zwerschke envió muchas correcciones y
 sugerencias pedagógicas, y explicó la diferencia entre {\em gleich}
 y {\em selbe}.
 
-\item James Mayer nos envió una gran cantida de errores de ortografía
+\item James Mayer nos envió una gran cantidad de errores ortográfico
 y tipográficos, incluyendo dos en la lista de colaboradores.
 
 \item Hayden McAfee encontró una inconsistencia potencialmente confusa
@@ -503,11 +503,11 @@ en el Capítulo 1 y mejoraron muchas de las otras ilustraciones.
 algunos comentarios pedagógicos interesantes y sugerencias sobre Fibonacci
 y Old Maid.
 
-\item Andy Mitchell encontró un error tipográfico en el Capítulo 1 y un ejemplo roto
-en el Capítulo 2.
+\item Andy Mitchell encontró un error tipográfico en el Capítulo 1 y un ejemplo
+incorrecto en el Capítulo 2.
 
 \item Kalin Harvey sugirió una aclaración en el Capítulo 7 y
-caught some typos.
+captó algunos errores tipográficos.
 
 \item Christopher P. Smith encontró muchos errores tipográficos y nos ayudó a
 actualizar el libro para Python 2.2.
@@ -528,7 +528,7 @@ una corrección a {\tt printTime} y un buen error tipográfico.
 \item Ken encontró un puñado de errores en los Capítulos 8, 9 y 11.
 
 \item Ivo Wever encontró un error tipográfico en el Capítulo 5 y sugirió una aclaración
-en el capítulo 3.
+en el Capítulo 3.
 
 \item Curtis Yanko sugirió una aclaración en el Capítulo 2.
 
@@ -570,7 +570,7 @@ uso de ``argumento'' y ``parámetro''.
 \item Andrew Cheung señaló dos instancias de ``use before def''.
 
 \item C. Corey Capel vio la palabra que faltaba en el Tercer Teorema
-de Debugging y un error tipográfico en el Capítulo 4.
+de la Depuración y un error tipográfico en el Capítulo 4.
 
 \item Alessandra ayudó a aclarar alguna confusión con Turtle.
 
@@ -599,7 +599,7 @@ un montón de correcciones.
 \item Gordon Shephard envió varias correcciones, todas en correos
 separados.
 
-\item Andrew Turner {\tt en}contró un error en el Capítulo 8.
+\item Andrew Turner encontró un error en el Capítulo 8.
 
 \item Adam Hobart arregló un problema con la división entera en {\tt arco}.
 
@@ -649,7 +649,7 @@ de una ``instancia'' y muchos otros errores.
 \item Ratnakar Tiwari sugirió una nota al pie explicando los triángulos
 degenerados.
 
-\item Anurag Goel sugirió otra solución para \verb"is_abecedarian"
+\item Anurag Goel sugirió otra solución para \verb"es_abecedario"
 y envió algunas correcciones adicionales.  Y sabe cómo
 deletrear Jane Austen.
 
@@ -670,7 +670,7 @@ pero sin mencionar el nombre.
 
 \item St\'{e}phane Morin envió varias correcciones y sugerencias.
 
-\item Paul Stoop corrigió un error tipográfico en \verb+uses_only+.
+\item Paul Stoop corrigió un error tipográfico en \verb+usa_solo+.
 
 \item Eric Bronner advirtió sobre una confusión en la discusión del
 orden de operaciones.
@@ -678,14 +678,14 @@ orden de operaciones.
 \item Alexandros Gezerlis estableció un nuevo estándar para el número y
 la calidad de sugerencias que envió.  ¡Estamos profundamente agradecidos!
 
-\item Gray Thomas conoce su derecha desde su izquierda.
+\item Gray Thomas distingue su derecha de su izquierda.
 
 \item Giovanni Escobar Sosa envió una larga lista de correcciones y
 sugerencias.
 
 \item Daniel Neilson corrigió un error sobre el orden de operaciones.
 
-\item Will McGinnis advirtió que {\tt polyline} fue definida
+\item Will McGinnis advirtió que {\tt polilinea} fue definida
 de manera diferente en dos lugares.
 
 \item Frank Hecker advirtió sobre un ejercicio que estaba subespecificado y
@@ -769,7 +769,7 @@ Al igual que los científicos, observan el comportamiento de sistemas complejos,
 a partir de hipótesis, y prueban predicciones.  \index{resolución de problemas}
 
 La habilidad más importante de un informático es la {\bf resolución
- de problemas}.  La resolución de problemas supone la capacidad para
+ de problemas}.  La resolución de problemas supone la capacidad de
  formular problemas, pensar creativamente en soluciones y emitir una solución
 de manera clara y precisa.  Como resultado, el proceso de aprender a
 programar es una excelente oportunidad para practicar habilidades de
@@ -796,10 +796,10 @@ instrucciones básicas aparecen en casi todos los lenguajes:
 
 \begin{description}
 
-\item[entrada ({\em input}):] Obtener datos desde el teclado, un archivo, la red o algún
+\item[entrada ({input}):] Obtener datos desde el teclado, un archivo, la red u
 otro dispositivo.
 
-\item[salida ({\em output}):] Mostrar datos en la pantalla, guardarlos en un
+\item[salida ({output}):] Mostrar datos en la pantalla, guardarlos en un
 archivo, enviarlos a través de la red, etc.
 
 \item[matemáticas:] Realizar operaciones matemáticas básicas como la suma y
@@ -808,7 +808,7 @@ la multiplicación.
 \item[ejecución condicional:] Verificar ciertas condiciones y
 ejecutar el código apropiado.
 
-\item[repetición:] Realizar alguna acción repetidas veces, usualmente con
+\item[repetición:] Realizar alguna acción repetidas veces, generalmente con
 alguna variación.
 
 \end{description}
@@ -1094,7 +1094,7 @@ Los lenguajes formales tienden a tener reglas de {\bf sintaxis} que
 gobiernan la estructura de las sentencias.
 Por ejemplo, en matemáticas la sentencia
 $3 + 3 = 6$ tiene sintaxis correcta, pero
-$3 + = 3 \$ 6$ no la tiene.  En química
+$3 + = 3 \$ 6$ no la tiene.  En química,
 $H_2O$ es una fórmula sintácticamente correcta, pero $_2Zz$ no.
 \index{sintaxis}
 
@@ -1123,8 +1123,8 @@ formal, tienes que descifrar la estructura
 proceso se llama {\bf análisis sintáctico} (en inglés, {\em parsing}).
 \index{análisis sintáctico}\index{parse}
 
-Aunque los lenguajes formales y naturales tienen muchas características en
-común---tokens, estructura y sintaxis---existen algunas
+Aunque los lenguajes formales y los lenguajes naturales tienen muchas características en
+común ---tokens, estructura y sintaxis--- existen algunas
 diferencias:
 \index{ambigüedad}
 \index{redundancia}
@@ -1144,8 +1144,8 @@ redundancia.  Como consecuencia, a menudo son verbosos.  Los lenguajes formales
 son menos redundantes y más concisos.
 
 \item[literalidad:] Los lenguajes naturales están llenos de modismo y metáfora.
-Si yo digo ``Cayó el centavo'', probablemente no hay ningún centavo ni
-nada cayendo (este modismo significa que alguien entendió algo
+Si yo digo ``Cayó en la cuenta'', probablemente no hay ninguna cuenta ni
+nadie cayendo (este modismo significa que alguien entendió algo
 después de un periodo de confusión).  Los lenguajes formales
 expresan exactamente lo que dicen.
 
@@ -1229,7 +1229,7 @@ con mis sugerencias para la depuración.  ¡Espero que ayuden!
 
 \begin{description}
 
-\item[resolución de problema:]  El proceso de formular un problema, encontrar
+\item[resolución de problemas:]  El proceso de formular un problema, encontrar
 una solución y expresarla.
 \index{resolución de problemas}
 
